--- a/resources/scss/settings/_bootstrap-variables.scss
+++ b/resources/scss/settings/_bootstrap-variables.scss
@@ -38,7 +38,7 @@ $colors: (
 );
 // scss-docs-end colors-map
 
-$primary: $blue; // change
+$primary: #008000; // Xidhiidhiye branding - custom green color
 $secondary: $secondary; // change
 $success: $green; // change
 $info: $cyan; // change
